# moller_vortex

./: .gitignore  README.md  analysis_workspace.ipynb  analysis_workspace.py  pyproject.toml
docs/: FUNCTION_GUIDE.md
notebooks/: usage_example.ipynb
src/moller_vortex/: __init__.py  accuracy.py  amplitudes.py  checks.py  constants.py  kinematics.py  packets.py  probability.py  smatrix.py  transverse.py
src/moller_vortex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
