[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moller-vortex"
version = "0.1.0"
description = "Numerical tools for Møller scattering of on-axis vortex packets in impulse approximation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
